--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,11 @@ homepage:
 dependencies:
   flutter:
     sdk: flutter
-
+    
+  flutter_markdown:
+    git:
+      url: git://github.com/julienzarka/flutter_markdown
+      
   url_launcher: ^5.4.1
   shared_preferences: ^0.5.3+2
 
